fix: remove gap from header

--- a/src/components/NavHeader/NavHeader.module.scss
+++ b/src/components/NavHeader/NavHeader.module.scss
@@ -3,7 +3,6 @@
 .container {
   padding: 32px 0;
   display: flex;
-  gap: 340px;
   justify-content: space-between;
   font-family: $font-family-title;
   font-weight: 600;
